[package]
name = "kypeer"
authors = ["Sabrina Hirani <sabrinahirani@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kyber-pke = "0.5.0"
clap = { version = "3.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.0"
rand = "0.7.3"
sha3 = "0.9.1"
hex = "0.4.3"
